--- a/seaborndata.ipynb
+++ b/seaborndata.ipynb
@@ -1736,7 +1736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "D = df[[\"ageCat\",\"sex\"]]"
+    "# D = df[[\"ageCat\",\"sex\"]]"
    ]
   },
   {
@@ -1786,14 +1786,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "68a009fa-e2dd-4b9f-9520-ec5df6e6d7ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mapper():\n",
     "    data = []\n",
-    "    for i,j in zip(D.iloc[:,0],D.iloc[:,1]):\n",
+    "    for i,j in zip(df.iloc[:,-2],df.iloc[:,2]):\n",
     "        if i == \"child\" and j == \"male\":\n",
     "            data.append(\"boy\")\n",
     "        elif i == \"child\" and j == \"female\":\n",
@@ -1808,12 +1808,12 @@
     "            data.append(\"men\")\n",
     "    return data\n",
     "        \n",
-    "df['newcat'] = mapper()"
+    "df['newcatUpdate'] = mapper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "6278ae31-00a4-4f0e-b606-8e341ebad243",
    "metadata": {},
    "outputs": [
@@ -1855,6 +1855,7 @@
        "      <th>alone</th>\n",
        "      <th>ageCat</th>\n",
        "      <th>newcat</th>\n",
+       "      <th>newcatUpdate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1877,6 +1878,7 @@
        "      <td>False</td>\n",
        "      <td>child</td>\n",
        "      <td>boy</td>\n",
+       "      <td>boy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1896,6 +1898,7 @@
        "      <td>yes</td>\n",
        "      <td>False</td>\n",
        "      <td>child</td>\n",
+       "      <td>boy</td>\n",
        "      <td>boy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1917,6 +1920,7 @@
        "      <td>False</td>\n",
        "      <td>child</td>\n",
        "      <td>girl</td>\n",
+       "      <td>girl</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1936,6 +1940,7 @@
        "      <td>yes</td>\n",
        "      <td>False</td>\n",
        "      <td>child</td>\n",
+       "      <td>girl</td>\n",
        "      <td>girl</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1957,9 +1962,11 @@
        "      <td>False</td>\n",
        "      <td>child</td>\n",
        "      <td>boy</td>\n",
+       "      <td>boy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1997,6 +2004,7 @@
        "      <td>True</td>\n",
        "      <td>old</td>\n",
        "      <td>men</td>\n",
+       "      <td>men</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>887</th>\n",
@@ -2016,6 +2024,7 @@
        "      <td>no</td>\n",
        "      <td>True</td>\n",
        "      <td>old</td>\n",
+       "      <td>men</td>\n",
        "      <td>men</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2037,6 +2046,7 @@
        "      <td>True</td>\n",
        "      <td>old</td>\n",
        "      <td>men</td>\n",
+       "      <td>men</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>889</th>\n",
@@ -2056,6 +2066,7 @@
        "      <td>no</td>\n",
        "      <td>True</td>\n",
        "      <td>old</td>\n",
+       "      <td>men</td>\n",
        "      <td>men</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2077,10 +2088,11 @@
        "      <td>True</td>\n",
        "      <td>old</td>\n",
        "      <td>men</td>\n",
+       "      <td>men</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>891 rows × 17 columns</p>\n",
+       "<p>891 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2097,23 +2109,36 @@
        "889         0       3    male  74.00      0      0   7.7750        S   Third   \n",
        "890         1       1    male  80.00      0      0  30.0000        S   First   \n",
        "\n",
-       "       who  adult_male deck  embark_town alive  alone ageCat newcat  \n",
-       "0    child       False  NaN    Cherbourg   yes  False  child    boy  \n",
-       "1    child       False  NaN  Southampton   yes  False  child    boy  \n",
-       "2    child       False  NaN    Cherbourg   yes  False  child   girl  \n",
-       "3    child       False  NaN    Cherbourg   yes  False  child   girl  \n",
-       "4    child       False  NaN  Southampton   yes  False  child    boy  \n",
-       "..     ...         ...  ...          ...   ...    ...    ...    ...  \n",
-       "886    man        True  NaN   Queenstown    no   True    old    men  \n",
-       "887    man        True    A    Cherbourg    no   True    old    men  \n",
-       "888    man        True  NaN    Cherbourg    no   True    old    men  \n",
-       "889    man        True  NaN  Southampton    no   True    old    men  \n",
-       "890    man        True    A  Southampton   yes   True    old    men  \n",
+       "       who  adult_male deck  embark_town alive  alone ageCat newcat  \\\n",
+       "0    child       False  NaN    Cherbourg   yes  False  child    boy   \n",
+       "1    child       False  NaN  Southampton   yes  False  child    boy   \n",
+       "2    child       False  NaN    Cherbourg   yes  False  child   girl   \n",
+       "3    child       False  NaN    Cherbourg   yes  False  child   girl   \n",
+       "4    child       False  NaN  Southampton   yes  False  child    boy   \n",
+       "..     ...         ...  ...          ...   ...    ...    ...    ...   \n",
+       "886    man        True  NaN   Queenstown    no   True    old    men   \n",
+       "887    man        True    A    Cherbourg    no   True    old    men   \n",
+       "888    man        True  NaN    Cherbourg    no   True    old    men   \n",
+       "889    man        True  NaN  Southampton    no   True    old    men   \n",
+       "890    man        True    A  Southampton   yes   True    old    men   \n",
        "\n",
-       "[891 rows x 17 columns]"
+       "    newcatUpdate  \n",
+       "0            boy  \n",
+       "1            boy  \n",
+       "2           girl  \n",
+       "3           girl  \n",
+       "4            boy  \n",
+       "..           ...  \n",
+       "886          men  \n",
+       "887          men  \n",
+       "888          men  \n",
+       "889          men  \n",
+       "890          men  \n",
+       "\n",
+       "[891 rows x 18 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b80964e-8e76-4aed-8720-40a5dce13515",
+   "id": "5b6ff4ce-3436-46b6-b172-a94fd7fffbea",
    "metadata": {},
    "outputs": [],
    "source": []
